welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:3: error: reassignment to val
		if (x=2) {
                     ^