welcome.lessons.welcome.bat.bool2.RedTicket.scala.code
def redTicket(a:Int, b:Int, c:Int):Int = {
	def eq25(x:Int):Int = {
		if (x=2) {
			return 5
		}else {
			return 0
		}
	}
	if (a==b && b==c && c==a) {
		return 5+eq25(a)
	}else {
		if (a!=b && c!=a) {
			return 1
		}else {
			return 0
		}
	}
}
